
apply plugin: 'java'
apply plugin: 'eclipse'

sourceCompatibility = 1.7
version = '1.0'
jar {
	manifest {
		attributes 'Implementation-Title': 'Integer-server', 'Implementation-Version': version
	}

}

configurations {
	provided
}

repositories {
	mavenCentral()
	maven { url "https://oosnmp.net/dist/release" }
	maven { url "http://repo.spring.io/libs-milestone" }
	maven { url "https://repository.jboss.org" }
	maven { url "http://repository.jboss.org/nexus/content/groups/public/" }
}

dependencies {
	compile project(':common')

	compile files("libs/grammatica-1.5.jar")
	compile files("libs/mibble-parser-2.9.3.jar")
	
	compile 'javax.validation:validation-api:${javaxValidationVersion}'
	compile group: 'commons-collections', name: 'commons-collections', version: '${commonsCollectionVersion}'
	compile group: 'org.hibernate', name: 'hibernate-core', version: '${hibernateCoreVersion}'
	compile "org.jboss.spec.javax.ejb:jboss-ejb-api_3.2_spec:${jbossEJBApiSpecVersion}"
	compile "javax.ws.rs:javax.ws.rs-api:${javaxWsRsApiVersion}"
	compile "javax.inject:javax.inject-tck:${javaxInjectVersion}"
	compile "javax.enterprise:cdi-api:${javaxEnterpriseCdiApiVersion}"
	compile "org.slf4j:slf4j-log4j12:${slf4jLog4jVersion}"
    compile "org.snmp4j:snmp4j:${snmp4jVersion}"
	compile "commons-net:commons-net:${commonsNetVersion}"
	
	testCompile "org.jboss.arquillian.junit:arquillian-junit-container:${junitArquillianVersion}"
	testCompile "org.jboss.arquillian.protocol:arquillian-protocol-servlet:${junitArquillianVersion}"
	testCompile group: 'junit', name: 'junit', version: '${junitVersion}'

	testRuntime ('org.wildfly:wildfly-arquillian-container-managed:8.0.0.CR1') {
		exclude module: 'wildfly-ee'
		exclude module: 'wildfly-server'
		exclude module: 'wildfly-osgi-service'
		exclude module: 'wildfly-jmx'
		exclude module: 'wildfly-arquillian-protocol-jmx'
		exclude module: 'wildfly-arquillian-testenricher-msc'
		exclude module: 'arquillian-testenricher-osgi'
		exclude group: 'org.jboss.shrinkwrap.resolver'
	}
	
	testRuntime('org.jboss:jboss-remote-naming:2.0.0.Final')
	testRuntime ("org.jboss:jboss-common-core:${jbossCommonCoreVersion}") {
		exclude group: 'org.jboss.logging'
	}
 	
}

test {
	maxHeapSize = '2048m'
	jvmArgs "-XX:MaxPermSize=512m"
}

task deployWildfly() << {
	println "Deploy Wildfly modules to " +  "$System.env.JBOSS_HOME/" 
	copy {
		from "src/wildfly"
		into "$System.env.JBOSS_HOME" 
	}
}

uploadArchives {
	repositories {
		flatDir {
			dirs 'repos'
		}
	}
}

